[package]
name = "poker_abstraction"
version = "0.1.0"
edition = "2021"

[lib]
name = "poker_abstraction"
path = "src/lib.rs"

[dependencies]
poker_indexer = { git = "https://github.com/yugurt2005/poker-indexer", branch = "master" }
poker_evaluator = { git = "https://github.com/yugurt2005/poker-evaluator", branch = "master" }

bincode = "1.3.3"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.13.2"
rand = "0.8.5"
rayon = "1.10.0"
textplots = "0.8.6"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "k_means_bench"
path = "benchmarks/k_means_bench.rs"
harness = false
